# small-args

./: .astylerc  .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
cmake-modules/: FindCTest.cmake  FindCatch.cmake
include/: smallargs.h  smallargs.hpp
sample/: sample.c  sample_args.txt  sample_cb.c  sample_cb.cpp  sample_get.c  sample_get.cpp
script/: get-deps.sh
scripts/: travis-build.sh
scripts/dep-scripts/: ctest.sh
test/: main.c  test_args.txt  test_args_empty_lines.txt  test_args_untrimmed.txt  test_smallargs.c
